Корегує футер на сторінці "Портфолио"

--- a/portfolio.html
+++ b/portfolio.html
@@ -252,7 +252,7 @@
 									target="_blank"
 									rel="noopener norefferer "
 								>
-									Киев, пр-т Леси Украинки, 26
+									г. Киев, пр-т Леси Украинки, 26
 								</a>
 							</li>
 							<li class="address-items">
@@ -294,20 +294,25 @@
 						</li>
 					</ul>
 				</div>
-				<form class="footer-form" autocomplete="off">
+				<div class="footer-form-feild">
 					<strong class="footer-form-subtitle">Подпишитесь на рассылку</strong>
 
-					<div class="footer-form-feild">
-						<input class="footer-form-input" type="email" name="mailing-email" id="mailing-email" />
-						<label class="footer-form-label" for="mailing-email">E-mail</label>
+					<form class="footer-form" autocomplete="off">
+						<input
+							class="footer-form-input"
+							type="email"
+							name="mailing-email"
+							id="mailing-email"
+							placeholder="E-mail"
+						/>
 						<button class="primary-button footer-btn" type="submit">
 							Подписаться
 							<svg class="footer-form-icon" width="24px" height="24px">
 								<use href="./images/icons.svg#icon-send"></use>
 							</svg>
 						</button>
-					</div>
-				</form>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
