--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<body>
 		<!--Cекція хедер-->
-		<header>
+		<header class="header">
 			<div class="header-container container">
 				<nav class="nav-container">
 					<a class="header-logo logo link" lang="en" href="./index.html">Web<span class="logo-header">Studio</span></a>
@@ -115,166 +115,167 @@
 			</section>
 
 			<!-- Ceкція work -->
-			<section class="section work">
+			<section class="work section">
 				<div class="container">
-					<h2 class="title">Чем мы занимаемся</h2>
-					<ul class="work-list list">
-						<li class="work-items">
-							<img src="./images/work-1.jpg" alt="Процесс написания кода" width="370" height="294" />
-							<p class="work-desc">Десктопные приложения</p>
+					<h2 class="work__title title">Чем мы занимаемся</h2>
+					<ul class="work__list list">
+						<li class="work__item">
+							<img class="work__icon" src="./images/work-1.jpg" alt="Процесс написания кода" width="370" height="294" />
+							<p class="work__desc">Десктопные приложения</p>
 						</li>
-						<li class="work-items">
+						<li class="work__item">
 							<img
+								class="work__icon"
 								src="./images/work-2.jpg"
 								alt="Работа с дизайном сайта для мобильной версии"
 								width="370"
 								height="294"
 							/>
-							<p class="work-desc">Мобильные приложения</p>
+							<p class="work__desc">Мобильные приложения</p>
 						</li>
-						<li class="work-items">
-							<img src="./images/work-3.jpg" alt="Работа с цветом" width="370" height="294" />
-							<p class="work-desc">Дизайнерские решения</p>
+						<li class="work__item">
+							<img class="work__icon" src="./images/work-3.jpg" alt="Работа с цветом" width="370" height="294" />
+							<p class="work__desc">Дизайнерские решения</p>
 						</li>
 					</ul>
 				</div>
 			</section>
 
 			<!-- Ceкція team -->
-			<section class="section team">
+			<section class="team section">
 				<div class="container">
-					<h2 class="title">Наша команда</h2>
-					<ul class="team-list list">
-						<li class="team-item item">
-							<img class="image" src="./images/team-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-							<div class="team-box">
-								<h3 class="subtitle">Игорь Демьяненко</h3>
-								<p class="desc" lang="en">Product Designer</p>
-								<ul class="team-socials list">
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="instagram-link">
-											<svg class="team-icon" width="20px" height="20px">
+					<h2 class="team__title title">Наша команда</h2>
+					<ul class="team__list list">
+						<li class="team__item item">
+							<img class="team__image" src="./images/team-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+							<div class="team__box">
+								<h3 class="team__subtitle">Игорь Демьяненко</h3>
+								<p class="team__position" lang="en">Product Designer</p>
+								<ul class="socials list">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="instagram-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="team-socials-item"
-										><a class="team-socials-link" href="#" aria-label="twitter-link">
-											<svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item"
+										><a class="socials__link" href="#" aria-label="twitter-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#twitter"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="facebook-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="facebook-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#facebook"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="linkedin-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="linkedin-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#linkedin"></use></svg
 										></a>
 									</li>
 								</ul>
 							</div>
 						</li>
-						<li class="team-item item">
-							<img class="image" src="./images/team-2.jpg" alt="Ольга Репина" width="270" height="260" />
-							<div class="team-box">
-								<h3 class="subtitle">Ольга Репина</h3>
-								<p class="desc" lang="en">Frontend Developer</p>
-								<ul class="team-socials list">
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="instagram-link">
-											<svg class="team-icon" width="20px" height="20px">
+						<li class="team__item item">
+							<img class="team__image" src="./images/team-2.jpg" alt="Ольга Репина" width="270" height="260" />
+							<div class="team__box">
+								<h3 class="team__subtitle">Ольга Репина</h3>
+								<p class="team__position" lang="en">Frontend Developer</p>
+								<ul class="socials list">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="instagram-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="team-socials-item"
-										><a class="team-socials-link" href="#" aria-label="twitter-link">
-											<svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item"
+										><a class="socials__link" href="#" aria-label="twitter-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#twitter"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="facebook-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="facebook-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#facebook"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="linkedin-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="linkedin-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#linkedin"></use></svg
 										></a>
 									</li>
 								</ul>
 							</div>
 						</li>
-						<li class="team-item item">
-							<img class="image" src="./images/team-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-							<div class="team-box">
-								<h3 class="subtitle">Николай Тарасов</h3>
-								<p class="desc" lang="en">Marketing</p>
-								<ul class="team-socials list">
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="instagram-link">
-											<svg class="team-icon" width="20px" height="20px">
+						<li class="team__item item">
+							<img class="team__image" src="./images/team-3.jpg" alt="Николай Тарасов" width="270" height="260" />
+							<div class="team__box">
+								<h3 class="team__subtitle">Николай Тарасов</h3>
+								<p class="team__position" lang="en">Marketing</p>
+								<ul class="socials list">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="instagram-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="team-socials-item"
-										><a class="team-socials-link" href="#" aria-label="twitter-link">
-											<svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item"
+										><a class="socials__link" href="#" aria-label="twitter-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#twitter"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="facebook-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="facebook-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#facebook"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="linkedin-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="linkedin-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#linkedin"></use></svg
 										></a>
 									</li>
 								</ul>
 							</div>
 						</li>
-						<li class="team-item item">
-							<img class="image" src="./images/team-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-							<div class="team-box">
-								<h3 class="subtitle">Михаил Ермаков</h3>
-								<p class="desc" lang="en">UI Designer</p>
-								<ul class="team-socials list">
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="instagram-link">
-											<svg class="team-icon" width="20px" height="20px">
+						<li class="team__item item">
+							<img class="team__image" src="./images/team-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+							<div class="team__box">
+								<h3 class="team__subtitle">Михаил Ермаков</h3>
+								<p class="team__position" lang="en">UI Designer</p>
+								<ul class="socials list">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="instagram-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="team-socials-item"
-										><a class="team-socials-link" href="#" aria-label="twitter-link">
-											<svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item"
+										><a class="socials__link" href="#" aria-label="twitter-link">
+											<svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#twitter"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="facebook-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="facebook-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#facebook"></use></svg
 										></a>
 									</li>
-									<li class="team-socials-item">
-										<a class="team-socials-link" href="#" aria-label="linkedin-link"
-											><svg class="team-icon" width="20px" height="20px">
+									<li class="socials__item">
+										<a class="socials__link" href="#" aria-label="linkedin-link"
+											><svg class="socials__icon" width="20px" height="20px">
 												<use href="./images/icons.svg#linkedin"></use></svg
 										></a>
 									</li>
