--- a/portfolio.html
+++ b/portfolio.html
@@ -23,30 +23,34 @@
 
 	<body>
 		<!--Cекція хедер-->
-		<header>
-			<div class="header-container container">
-				<nav class="nav-container">
-					<a class="header-logo logo link" lang="en" href="./index.html">Web<span class="logo-header">Studio</span></a>
+		<header class="header">
+			<div class="header__container container">
+				<nav class="nav">
+					<a class="header__logo logo link" lang="en" href="./index.html"
+						>Web<span class="logo__logo-part">Studio</span></a
+					>
 
-					<ul class="site-nav list">
-						<li class="items"><a class="link" href="./index.html">Студия</a></li>
-						<li class="items"><a class="link current-page" href="./portfolio.html">Портфолио</a></li>
-						<li class="items"><a class="link" href="#">Контакты</a></li>
+					<ul class="nav__list list">
+						<li class="nav__item"><a class="nav__link link" href="./index.html">Студия</a></li>
+						<li class="nav__item"
+							><a class="nav__link link nav__link--current" href="./portfolio.html">Портфолио</a></li
+						>
+						<li class="nav__item"><a class="nav__link link" href="#">Контакты</a></li>
 					</ul>
 				</nav>
 
-				<ul class="header-contact list">
-					<li class="items">
-						<a class="link" href="mailto:info@devstudio.com">
-							<svg class="header-contact-icon" width="16px" height="12px">
+				<ul class="header__contact contact list">
+					<li class="contact__item">
+						<a class="contact__link link" href="mailto:info@devstudio.com">
+							<svg class="contact__icon" width="16px" height="12px">
 								<use href="./images/icons.svg#envelope"></use>
 							</svg>
 							info@devstudio.com</a
 						>
 					</li>
-					<li class="items"
-						><a class="link" href="tel:+380961111111">
-							<svg class="header-contact-icon" width="10px" height="16px">
+					<li class="contact__item"
+						><a class="contact__link link" href="tel:+380961111111">
+							<svg class="contact__icon" width="10px" height="16px">
 								<use href="./images/icons.svg#smartphone"></use>
 							</svg>
 							+38 096 111 11 11</a
