Створює mixin title та  placeholder section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 			</section>
 
 			<!--Cекція переваги компанії-->
-			<section class="benefits section">
+			<section class="benefits">
 				<div class="container">
-					<h2 class="visually-hidden title">Преимущества компании</h2>
+					<h2 class="visually-hidden">Преимущества компании</h2>
 					<ul class="benefits__list list">
 						<li class="benefits__items">
 							<div class="benefits__pic">
@@ -126,9 +126,9 @@
 			</section>
 
 			<!-- Ceкція work -->
-			<section class="work section">
+			<section class="work">
 				<div class="container">
-					<h2 class="work__title title">Чем мы занимаемся</h2>
+					<h2 class="work__title">Чем мы занимаемся</h2>
 					<ul class="work__list list">
 						<li class="work__item">
 							<img class="work__icon" src="./images/work-1.jpg" alt="Процесс написания кода" width="370" height="294" />
@@ -153,9 +153,9 @@
 			</section>
 
 			<!-- Ceкція team -->
-			<section class="team section">
+			<section class="team">
 				<div class="container">
-					<h2 class="team__title title">Наша команда</h2>
+					<h2 class="team__title">Наша команда</h2>
 					<ul class="team__list list">
 						<li class="team__item item">
 							<img class="team__image" src="./images/team-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
@@ -298,9 +298,9 @@
 			</section>
 
 			<!-- Секція clients -->
-			<section class="clients section">
+			<section class="clients">
 				<div class="container">
-					<h2 class="clients__title title">Постоянные клиенты</h2>
+					<h2 class="clients__title">Постоянные клиенты</h2>
 					<ul class="clients__list list">
 						<li class="clients__item item"
 							><a class="clients__link link" href="#"
