Змінює клас  subtitle

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
 		<!-- Styles -->
-		<link rel="stylesheet" href="./css/main.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
 
 	<body>
@@ -366,7 +366,7 @@
 					</address>
 				</div>
 				<div class="footer__socials-block">
-					<strong class="footer__subtitle subtitle subtitle--inverse subtitle--centered">Присоединяйтесь</strong>
+					<strong class="footer__subtitle subtitle subtitle--inverse">Присоединяйтесь</strong>
 					<ul class="socials list">
 						<li class="socials__item">
 							<a class="socials__link socials__link--dark-theme" href="#" aria-label="instagram-link">
