Забирає зі strong y футері subtitle--centered

--- a/portfolio.html
+++ b/portfolio.html
@@ -272,7 +272,7 @@
 					</address>
 				</div>
 				<div class="footer__socials-block">
-					<strong class="footer__subtitle subtitle subtitle--inverse subtitle--centered">Присоединяйтесь</strong>
+					<strong class="footer__subtitle subtitle subtitle--inverse">Присоединяйтесь</strong>
 					<ul class="socials list">
 						<li class="socials__item">
 							<a class="socials__link socials__link--dark-theme" href="#" aria-label="instagram-link">
